# snip

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  flake.nix
data/: dev.snip.app.desktop
docs/superpowers/plans/: 2026-04-02-snip-implementation.md  2026-06-23-window-accent-border.md
docs/superpowers/specs/: 2026-04-02-snip-screenshot-tool-design.md  2026-06-23-window-accent-border-design.md
src/: capture.rs  editor.rs  main.rs  utils.rs
src/tools/: brush.rs  mod.rs  rect.rs
